src/styles/skin.css
@tailwind components;
@tailwind utilities;
@tailwind base;

@layer base {
	.theme-gradient-from {
		background-color: var(--cfab-gradient-from);
	}

	.theme-gradient-to {
		background-color: var(--cfab-gradient-to);
	}

	.theme-border {
		border-color: var(--cfab-border-color);
		border-width: 1px;
	}

	.soft-title {
		color: var(--cfab-soft-title-text-color);
	}

	.paper {
		@apply backdrop-opacity-10 backdrop-blur-3xl;
		border-radius: 0.5rem;
		padding: 1rem 0.5rem;
		border-color: var(--cfab-paper-border-color);
		background-color: var(--cfab-paper-bg-color);

		backdrop-filter: blur(3px);
	}

	.iconify {
		display: inline-block;
		opacity: 0.7;
		font-size: 1.1em;
		&.sm {
			font-size: 1.1em;
		}
		&.md {
			font-size: 1.6em;
		}
		&.lg {
			font-size: 2.7em;
		}
		&.xl {
			font-size: 3.8em;
		}
		&.spin {
			animation: spin 1s linear infinite;
		}
		svg {
			> path {
				color: var(--cfab-icon-color);
			}
		}
	}

	hr {
		margin: 1em 0;
		border: 1px solid top;
		@apply border-indigo-500/30 dark:border-white/20;
	}

	svg {
		> path {
			color: var(--cfab-icon-color);
		}
	}
}
/* todo, stop using tailwind @apply */
@layer components {
	/* scope gui */
	.application {
		color: var(--cfab-foreground);
		background-color: var(--cfab-input-background-color);
		background-image: var(--cfab-gradient);
		display: flex;
		width: 100%;
		height: 100%;
		overflow: hidden;

		.application-sideBar {
			@apply hidden w-[280px] md:block;
			height: 100%;
			transition: width 0.2s ease-in-out;
			overflow: hidden;
			z-index: 30;
			flex-shrink: 1;
		}
		.application-sideBar-title {
			color: var(--cfab-soft-title-text-color);
			text-align: right;
		}

		.application-sideBar-content {
			max-height: 100%;
			overflow-y: auto;
		}
	}

	.application-container {
		@apply lg:max-w-[55rem] xl:max-w-[65] 2xl:max-w-[75rem] 3xl:max-w-[100rem];
		display: flex;
		flex-direction: column;
		flex: 1;
		position: relative;
	}

	.application-content {
		display: flex;
		flex-direction: column;
		flex: 1;
		overflow: hidden;
		z-index: 0;
		position: relative;

		.application-topBar {
			display: flex;
			align-items: center;
			z-index: 50;
			top: 0;
			left: 1rem;
			padding: 0.5rem 1rem 0.5rem 0.5rem;
			gap: 1rem;
			margin-top: 0px;
		}

		.application-main {
			position: relative;
			overflow: auto;
			height: 100%;
			width: 100%;
		}
	}
}

@layer components {
	/* inputs */
	.application {
		/* button,
		input[type='button'], */
		input[type='search'],
		input[type='submit'],
		input[type='reset'],
		input[type='number'],
		input[type='text'],
		select,
		textarea {
			outline: none;
			display: inline-flex;
			align-items: center;
			gap: 0.5rem;
			padding: 0.5rem;
			border-radius: 0.375rem;
			border: 1px solid var(--cfab-input-border-color);
			background: var(--cfab-input-bg-color);
			color: var(--cfab-input-foreground-color);

			transition: all 0.3s ease-in-out;

			&.naked {
				border-color: transparent;
			}

			&:hover {
				border-color: var(--cfab-input-border-color-focus);
				box-shadow: var(--cfab-shadow);
			}

			&:active,
			&:focus {
				border: 1px solid var(--cfab-input-border-color-focus);
				box-shadow: var(--cfab-shadow);
			}

			[disabled] {
				opacity: 0.5;
				cursor: not-allowed;
			}
		}

		select {
			option {
				@apply bg-white/80 dark:bg-black p-1 cursor-pointer;
				@apply text-gray-700 dark:text-gray-100;
			}
		}

		textarea {
			display: block;
			width: 100%;
		}
	}

	button,
	input[type='button'] {
		&.btn {
			@apply rounded-md border border-gray-700;
			@apply text-gray-700 bg-gray-200;
			@apply dark:bg-gray-900/40 dark:text-gray-100;
			@apply flex place-items-center;
			padding-left: 0.5rem  ;
			padding-right: 0.5rem  ;
			min-height: 24px;
		}

		&.btn-big {
			padding-left: 2rem  ;
			padding-right: 2rem  ;
		}

		&.btn-link {
			border: none;
			border-bottom: 1px solid red;
		}

		&:hover {
			border-color: darken(9);
		}
	}
}

